1.0.0
  - extracting ShopifyAPI from Shopify into Gem